:bug: Since we use clip-path over overflow, footer bleed outside document

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -38,7 +38,3 @@ p {
 strong {
 	@extend %font-weight-bold;
 }
-
-[data-scroll-container] {
-	@extend %overflow-hidden;
-}
