--- a/src/stylesheets/components/_footer.scss
+++ b/src/stylesheets/components/_footer.scss
@@ -6,6 +6,8 @@
  *
  */
 .Footer {
+	@extend %overflow-hidden;
+
 	&__items {
 		@extend %list-style-type-none;
 	}
